# sistemas-inteligentes

./: README.md  pyproject.toml
class/2024-09-11/: clean_robot.py
class/2024-09-12/: Assunto.md  n_queens.py
